<?xml version="1.0" encoding="utf-8"?>
<resources>
    //App name
    <string name="app_name">PizzaAppDemo</string>
    //splash
    <string name="roma_pizza">Roma Pizza</string>
    <string name="text_splash_pizza">version %1$s</string>

    //home Screen text
    <string name="xit">Xit</string>
    <string name="tashkent">Tashkent</string>
    <string name="check_shipping_address">Check shipping address</string>
    <string name="address">address</string>
    <string name="food">Foods</string>
    <string name="filter">Filter</string>
    <string name="sign_in">Sign in</string>

    //draw item
    <string name="Stock" translatable="false">Акции</string>
    <string name="ru">Ru</string>
    <string name="eng">Eng</string>
    <string name="uzb">Uzb</string>
    <string name="setting">Settings</string>
    <string name="themes">Themes</string>
    <string name="share">Share</string>
    <string name="help">Help Center</string>
    <string name="close">close</string>
    <string name="search">Search…</string>
</resources>