<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.screen.home.HomeScreen"
    tools:openDrawer="start">

    <include
        android:id="@+id/liner"
        layout="@layout/screen_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navViews"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="true"
            android:elevation="20dp"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/userName"
                style="@style/userName_style"
                android:text="Alimardon Toshmatov"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userPhoneNumber"
                style="@style/userPhone_style"
                android:text="+998 93 216 61 20"
                app:layout_constraintEnd_toEndOf="@+id/userName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/line_color"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
                app:layout_constraintTop_toBottomOf="@+id/userPhoneNumber"
                tools:layout_editor_absoluteX="8dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPhoneNumber">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/settingLiner"
                    style="@style/liner_style">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/settingImage"
                        style="@style/draw_image_style"
                        android:src="@drawable/ic_gear"
                        app:tint="@color/category_text_color" />

                    <TextView
                        android:id="@+id/settingText"
                        style="@style/draw_text_style"
                        android:text="@string/setting" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/themeLiner"
                    style="@style/liner_style">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/themeImage"
                        style="@style/draw_image_style"
                        android:src="@drawable/ic_picture"
                        app:tint="@color/category_text_color" />

                    <TextView
                        android:id="@+id/themeText"
                        style="@style/draw_text_style"
                        android:text="@string/themes" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/shareLiner"
                    style="@style/liner_style">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/shareImage"
                        style="@style/draw_image_style"
                        android:src="@drawable/ic_share"
                        app:tint="@color/category_text_color" />

                    <TextView
                        android:id="@+id/shareText"
                        style="@style/draw_text_style"
                        android:text="@string/share" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/helpLiner"
                    style="@style/liner_style">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/helpImage"
                        style="@style/draw_image_style"
                        android:src="@drawable/ic_headset"
                        app:tint="@color/category_text_color" />

                    <TextView
                        android:id="@+id/helpText"
                        style="@style/draw_text_style"
                        android:text="@string/help" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/closeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/close"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/close"
                app:layout_constraintStart_toEndOf="@+id/close"
                app:layout_constraintTop_toTopOf="@+id/close" />

            <TextView
                android:id="@+id/versionAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/closeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/closeText" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>