<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.screen.home.HomeScreen">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="#FFF"
            android:fitsSystemWindows="true"
            app:elevation="1dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/headerOne"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/ic_geo_alt"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/tashkent"
                            android:textColor="@color/black"
                            tools:ignore="UseCompatTextViewDrawableXml" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="?android:selectableItemBackgroundBorderless"
                            android:gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/ic_chevron_up"
                            android:textColor="@color/white"
                            android:textSize="20sp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginHorizontal="8dp"
                        android:background="@color/line_color" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/headerTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/pizza"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/wherePizza"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/where"
                            android:textColor="@color/black" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/menuBurger"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="?android:selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp"
                            android:src="@drawable/ic_menu_burger" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryList"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/bg_home_color"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/category_item" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@color/bg_home_color"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/adsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:listitem="@layout/ads_item" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="124dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="12sp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/check_shipping_address"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/addressInput"
                            android:layout_width="236dp"
                            android:layout_height="44dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/edittext_style"
                            android:drawableStart="@drawable/ic_geo_alt"
                            android:elevation="4dp"
                            android:hint="@string/address"
                            android:paddingStart="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/sendLocation"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/sendLocation"
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:backgroundTint="@color/bg_home_ads_color2"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="2dp"
                            app:layout_constraintBottom_toBottomOf="@+id/addressInput"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/addressInput"
                            app:layout_constraintTop_toTopOf="@+id/addressInput">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="10dp"
                                android:src="@drawable/send" />
                        </com.google.android.material.card.MaterialCardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="6dp"
                    android:elevation="0dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:text="@string/food"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/filter"
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="2dp"
                        android:clickable="true"
                        android:elevation="0dp"
                        android:focusable="true"
                        app:cardCornerRadius="6dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingStart="10dp"
                            android:text="@string/filter"
                            android:textColor="@color/black"
                            app:drawableStartCompat="@drawable/filter"
                            tools:ignore="RtlSymmetry" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/foodList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/food_item" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_basket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/cardCount"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/text_style"
        android:elevation="10dp"
        android:gravity="center"
        android:paddingTop="2dp"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton"
        tools:text="0" />

</androidx.constraintlayout.widget.ConstraintLayout>